traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-web-ui
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: traefik-ui.minikube
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: traefik-ingress-service # 指定了后端服务的名称，表示将流量转发到名为traefik-ingress-service的Kubernetes服务
                port:
                  number: 8080 # 指定了后端服务的端口，表示将流量转发到该服务的8080端口。
